[FIX]Improved color contrast

--- a/style.css
+++ b/style.css
@@ -663,6 +663,10 @@ a {
     font-size: 25px;
 }
 
+.ready-to {
+    color: rgb(241, 240, 240);
+}
+
 .text-center {
     text-align: center;
     font-size: 18px
@@ -791,7 +795,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white!important;
     font-size: 22px;
 }
 
